--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,11 @@
         </activity>
         <activity android:name=".MovieDetailsPage" />
         <activity android:name=".ReviewContent"></activity>
+
+        <provider
+            android:name="com.example.android.movies1.DataBase.MovieContentProvider"
+            android:authorities="com.example.android.movies1"
+            android:exported="false"/>
     </application>
 
 </manifest>
